# Omnisight_Multimodal_AI

./: docker-compose.yml
omnisight/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
omnisight-web/: Dockerfile  (+2 more)
omnisight/configs/contracts/: amazon_reviews_products.schema.json  amazon_reviews_reviews.schema.json  entity_map.schema.json  reddit_mentions.schema.json  transactions_uci.schema.json  trends.schema.json
omnisight/configs/mappings/: trend_keyword_map.csv
omnisight/configs/taxonomy/: category_taxonomy.csv
omnisight/data/app/: omnisight.db  review_export.csv
omnisight/scripts/: batch_reasoning.py  build_decision_features.py  build_entity_map.py  build_feature_base.py  build_inventory_table.py  build_live_snapshot_placeholders.py  build_source_health.py  collect_live_market_catalog.py  collect_live_trends.py  download_product_images.py  import_google_trends.py  ingest_amazon_reviews.py  ingest_uci_online_retail.py  merge_historical_and_live.py  merge_multicategory_tables.py  prepare_fresh_data_layout.py  prepare_multicategory_layout.py  reason_about_product.py  run_decision_engine.py  run_graph.py  seed_qdrant.py  stream_graph.py  test_decision_engine.py  test_retrieval.py
omnisight/src/omnisight/: logging_config.py  settings.py
omnisight/src/omnisight.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
omnisight/src/omnisight/analysis/: dashboard_allocator.py  product_analyzer.py  types.py
omnisight/src/omnisight/api/: logging_middleware.py  main.py  routes.py  schemas.py  security.py
(+92 files in other folders)
